--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <html>
 <head>
-<link rel="stylesheet" type="text/css" href="goodstyle.css">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 </body>
 <center><h1>Keep the coversation, curb the coronavirus</h1></center>
+<center><h3>If you would like to see more chat groups, post some ideas!</h3></center>
 <center><iframe src="https://minnit.chat/6thGraders?embed&nickname=" style="border:none;width:90%;height:500px;" allowTransparency="true"></iframe><br><a href="https://minnit.chat/6thGraders" target="_blank">HTML5 Chatroom powered by Minnit Chat</a></center>
 </html>
